added attendance comp html

--- a/src/app/Admin/Team/attendance/attendance.component.html
+++ b/src/app/Admin/Team/attendance/attendance.component.html
@@ -1,1 +1,82 @@
-<p>attendance works!</p>
+<div class="row mt-5">
+    <div class="col-12">
+        <div  class="card-header text-center">
+            <h3>Team Attendance</h3>
+        </div>
+          <div class="card-body">
+        
+            <div class="row mt-5 mb-5">
+                <div class="col-2">
+                </div>
+              <div class="col-8">
+                  
+                  <div class="card">
+                    <div  class="card-header text-center">
+                      <div class="row">
+                        <div class="col-3">
+                          <h5><b>Team: </b><span>{{teamData.teamName}}</span></h5>
+                        </div>
+                        <div class="col-5">
+                          <h5><b>Date: </b><span>{{today | date}}</span></h5>
+                        </div>
+                        <div class="col-4">
+                          <h5><b>Timings: </b><span>{{teamData.startTime | date:'shortTime'}} - {{teamData.endTime | date:'shortTime'}}</span></h5>
+                        </div>
+                      </div>
+                  </div>
+                      <div class="card-body">
+                        <div class="row">
+                          <table class="table">
+                              <thead  style="background-color: rgb(103, 186, 241);">
+                                <tr>
+                                  <th scope="col">Initial</th>
+                                  <th scope="col">Surname</th>
+                                  <th scope="col">Present</th>
+                                  <th scope="col">Absent</th>
+                                  <th scope="col">Reason</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let attendance of teamAttendanceData">
+                                  <td scope="row">{{attendance.initials}}</td>
+                                  <td scope="row">{{attendance.surname}}</td>
+                                  <td scope="row">
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" [name]="attendance.initials" [id]="attendance.attendanceId" [checked]="attendance.present"  (change)="markPresent(attendance)">
+                                    </div>
+                                  </td>
+                                  <td scope="row">
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="radio" [name]="attendance.initials" [id]="attendance.attendanceId" [checked]="attendance.absent" (change)="markAbsent(attendance)">
+                                    </div>
+                                  </td>
+                                  <td scope="row">
+                                    <div class="row form-group">
+                                      <div class="col-12">
+                                        <input type="text"  class="form-control" [name]="attendance.initials" [id]="attendance.attendanceId" [(ngModel)]="attendance.reason" >
+                                      </div>
+                                    </div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                        </div>
+                      </div>
+                    </div>
+      
+              </div>
+              <div class="col-2">
+      
+              </div>
+      
+            </div>
+            <div class="row mt-5">
+              <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" (click)="markAttendance()">Save</button>
+                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/detail'" >Cancel</button>
+              </div>
+            </div>        
+          </div>
+    </div>
+  </div>
+
