reset password initial step screen

--- a/src/app/user-sub-system/reset-password-initial-step/reset-password-initial-step.component.html
+++ b/src/app/user-sub-system/reset-password-initial-step/reset-password-initial-step.component.html
@@ -1,1 +1,58 @@
-<p>reset-password-initial-step works!</p>
+
+<div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-8">
+        
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Login Screen</h3>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-2">
+            </div>
+            <div class="col-8">
+                <form [formGroup]="infoForm">
+                    <div class="row form-group">
+                      <div class=" col-12">
+                          <label >Username:</label>
+                          <input type="text" class="form-control" placeholder="username" formControlName="userName">
+                      </div>
+                    </div>
+                    <div class="row form-group">
+                      <div class=" col-12">
+                          <label >Email:</label>
+                          <input type="email" class="form-control" placeholder="example@email.com" formControlName="email">
+                      </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class=" col-12">
+                            <label >Password:</label>
+                            <input type="text" class="form-control" placeholder="username" formControlName="password">
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class=" col-12">
+                            <label >Confirm Password:</label>
+                            <input type="email" class="form-control" placeholder="example@email.com" formControlName="confirmPassword">
+                        </div>
+                      </div>  
+                </form>
+        
+            </div>
+            <div class="col-2">
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" (click)="submit()">Submit</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+    </div>
+    <div class="col-2">
+    </div>
+</div>
