--- a/src/app/client-sub-system/Enquiries/add-enquiry/add-enquiry.component.html
+++ b/src/app/client-sub-system/Enquiries/add-enquiry/add-enquiry.component.html
@@ -1,1 +1,73 @@
-<p>add-enquiry works!</p>
+
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Enquiry Type</h3>
+    </div>
+    <div class="card-body">
+      
+
+        <div class="row">
+            <div class="card">
+                <div  class="card-header ">
+                  <h5>Add Enquiry Type</h5>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="addEnquiryForm">
+                        <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label>Admin:</label>
+                                <select  class="form-control" formControlName="adminUserId">
+                                  <option value="none">--Select Admin--</option>
+                                  <option [value]="admin.userId" *ngFor="let admin of adminData">{{admin.initials+' '+admin.surname}}</option>
+                                </select>    
+                            </div>
+                        </div>
+                          <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label>Enquiry Type:</label>
+                                <select  class="form-control" formControlName="enquiryTypeId">
+                                  <option value="none">--Select Enquiry Type--</option>
+                                  <option [value]="enquiryType.enquiryTypeId" *ngFor="let enquiryType of enquiryTypesData">{{enquiryType.enquiryTypeDescription}}</option>
+                                </select>
+                             </div>
+                          </div>
+                          <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label >Message:</label>
+                                <textarea  class="form-control" placeholder="Enquiry Message" formControlName="enquiryMessage" cols="10" rows="10"></textarea>
+                            </div>
+                          </div>
+
+
+                    </form>
+                </div>
+              </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{enquiryId==0?'Save':'Update'}}</button>
+                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/client/enquiry/detail'" >Cancel</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <!-- Admin Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Enquiry Addition confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Confirm Enquiry Addition</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddEnquiry()">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
