--- a/src/app/Employee/employee-register/employee-register.component.html
+++ b/src/app/Employee/employee-register/employee-register.component.html
@@ -1,1 +1,83 @@
-<p>employee-register works!</p>
+<div class="card mb-5">
+    <div  class="card-header text-center">
+      <h3>Employee Register</h3>
+    </div>
+    <div class="card-body">
+      
+        <div class="row">
+            <div class="card mb-5">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12">   
+                            <h5 style="float: left;">Team: <span>Team1</span></h5>
+                            <h5 style="float: right;">Date: <span>2020/06/15</span></h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">   
+                            <h5 style="float: left;">7:30 - 17:30</h5>
+                        </div>
+                    </div>
+                </div>
+              </div>
+        </div>
+
+        <div class="card mt-5">
+            <div class="card-body">
+              <div class="row mt-5 mb-5">
+                  <div class="col-2">
+        
+                  </div>
+                <div class="col-8">
+                    
+                    <div class="card">
+                        <div class="card-body">
+                          <div class="row">
+                            <table class="table">
+                                <thead  style="background-color: rgb(103, 186, 241);">
+                                  <tr>
+                                    <th scope="col">Employee</th>
+                                    <th scope="col">Present</th>
+                                    <th scope="col">Absent</th>
+                                    <th scope="col">Reason</th>
+
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td scope="row">Sp Myers</td>
+                                    <td scope="row">
+                                        <input class="form-check-input" type="checkbox" id="present">
+                                    </td>
+                                    <td scope="row">
+                                        <input class="form-check-input" type="checkbox" id="absent">
+                                    </td>
+                                    <td scope="row">
+                                        <input type="text" class="form-control" />
+                                    </td> 
+                                  </tr>
+                                </tbody>
+                              </table>
+                          </div>
+                        </div>
+                      </div>
+        
+                </div>
+                <div class="col-2">
+        
+                </div>
+        
+              </div>
+            </div>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;">Save</button>
+                <button type="button" class="btn btn-secondary" style="float: right;">Cancel</button>
+            </div>
+        </div>
+
+
+    </div>
+  </div>
