--- a/src/app/employee-sub-system/update-employee-profile/update-employee-profile.component.html
+++ b/src/app/employee-sub-system/update-employee-profile/update-employee-profile.component.html
@@ -1,1 +1,43 @@
-<p>update-employee-profile works!</p>
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Employee Profile</h3>
+    </div>
+    <div class="card-body">
+        <div class="row mt-3 mb-3">
+                    <form action="">
+                        <div class="row form-group">
+                          <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                              <label >Initials:</label>
+                              <input type="text" class="form-control" placeholder="initials">
+                          </div>
+                        </div>
+                        <div class="row form-group">
+                          <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                              <label >Surname:</label>
+                              <input type="text" class="form-control" placeholder="surname">
+                          </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label >ID Number:</label>
+                                <input type="number" class="form-control" placeholder="Id number">
+                            </div>
+                          </div>    
+                        <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label >Email Address:</label>
+                                <input type="email" class="form-control" placeholder="email">
+                            </div>
+                          </div>
+                    </form>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;">Update</button>
+                <button type="button" class="btn btn-primary" style="float: left; margin-left: 5px;">Cancel</button>
+
+            </div>
+        </div>
+    </div>
+  </div>
