--- a/src/app/employee-sub-system/view-employee-profile/view-employee-profile.component.html
+++ b/src/app/employee-sub-system/view-employee-profile/view-employee-profile.component.html
@@ -1,1 +1,125 @@
-<p>view-employee-profile works!</p>
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Employee Profile</h3>
+    </div>
+    <div class="card-body">
+        <div class="row mt-3 mb-3">
+          <div class="row form-group mt-5 mb-5">
+            <div class="col-lg-8 col-md-6 col-sm-5 col-12">
+                <img style="height:15rem; width: 15rem; float: rigth;" [src]="employeeData?.image">
+            </div>
+            
+        </div> 
+        <div class="row">
+          <div class="col-3">
+            <input style="display: none;" type="file" id="employeeImage"
+            (change)="uploadImage($event)" #file>
+        <button style=" color:rgb(252, 250, 250);" type="button" class="btn btn-primary" (click)="file.click()">{{employeeData.image!=null?'Update':'Update'}} Image<i
+                class="fas fa-upload mg-l-10"></i></button>  
+          </div>
+        </div>
+        <form [formGroup]="employeeDetailForm">
+          <div class="row form-group">
+            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+              <label>Initials:</label>
+              <input type="text" class="form-control" formControlName="initials" [readonly]="editDetail" placeholder="initials">
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+              <label>Surname:</label>
+              <input type="text" class="form-control" formControlName="surname" [readonly]="editDetail" placeholder="surname">
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+              <label>Email Address:</label>
+              <input type="email" class="form-control" formControlName="email" [readonly]="editDetail" placeholder="email">
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+              <label>Team Name:</label>
+              <input type="text" class="form-control" formControlName="team" readonly placeholder="Team Name">
+            </div>
+          </div>
+          <div class="row mt-5" *ngIf="employeeData.teamName!=null">
+            <div class="col-12">
+                <div  class="card-header text-center">
+                    <h3>Employees in Team</h3>
+                  </div>
+                  <div class="card-body">                
+                    <div class="row mt-5 mb-5">
+                        <div class="col-2">
+                        </div>
+                      <div class="col-8">
+                          
+                          <div class="card">
+                              <div class="card-body">
+                                <div class="row">
+                                  <table class="table">
+                                      <thead  style="background-color: rgb(103, 186, 241);">
+                                        <tr>
+                                          <th scope="col">Initial</th>
+                                          <th scope="col">Surname</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr *ngFor="let employee of teamEmployeeData">
+                                          <td scope="row">{{employee.initials}}</td>
+                                          <td scope="row">{{employee.surname}}</td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                </div>
+                              </div>
+                            </div>
+              
+                      </div>
+                      <div class="col-2">
+              
+                      </div>
+              
+                    </div>
+                  </div>
+            </div>
+          </div>
+
+        </form>
+            <div class="row form-group" *ngIf="employeeData.document!=null">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                  <h5 >Document: <span><a  (clicl)="downloadDocument()">Download</a></span></h5>
+              </div>
+            </div>
+            <div class="row mt-5">
+              <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"
+                data-bs-toggle="modal" data-bs-target="#additionConfirmation" [disabled]="editDetail" >{{'Update'}}</button>
+                <button type="button" class="btn btn-secondary" style="float: right;" [disabled]="!editDetail" (click)="editProfile()">Edit</button>
+              </div>
+            </div>
+        
+        </div>
+    </div>
+
+  </div>
+
+<!-- Admin Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Employee Addition confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Confirm Employee Addition</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddAdminForm()">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
