--- a/src/app/Admin/ClientEnquiry/client-enquiry-detail/client-enquiry-detail.component.html
+++ b/src/app/Admin/ClientEnquiry/client-enquiry-detail/client-enquiry-detail.component.html
@@ -1,1 +1,80 @@
-<p>client-enquiry-detail works!</p>
+
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Enquiry Details</h3>
+    </div>
+    <div class="card-body">
+      <div class="row mt-5 mb-5">
+          <div class="col-2">
+
+          </div>
+        <div class="col-8">
+            
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h5>Client Name:</h5>{{enquiryData?.clientName}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h5>Enquiry Type</h5>{{enquiryData?.enquiryType}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <h5>Message</h5>
+                            <p>{{enquiryData?.enquiryMessage}}</p>
+                        </div>
+                    </div>
+                </div>
+              </div>
+                    <div class="card mt-5">
+                        <div  class="card-header text-center">
+                            <h5>Respond Enquiry</h5>
+                          </div>
+                        <div class="card-body">
+                            <form [formGroup]="responseForm">
+                                <div class="row form-group">
+                                    <div class="col-12">
+                                        <label > <h6>Response:</h6> </label>
+                                        <textarea  class="form-control" placeholder="Enquiry Response Message" formControlName="enquiryResponseMessage" cols="20" rows="10"></textarea>
+                                    </div>
+                                  </div>        
+                            </form>
+                            <div class="row mt-5">
+                                <div class="col-12">
+                                    <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{this.enquiryData.enquiryResponseMessage!=0?'Update':'Submit'}}</button>
+                                    <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/enquiry/detail'" >Cancel</button>
+                                  </div>
+                            </div>                    
+                        </div>
+                      </div>
+            
+        </div>
+        <div class="col-2">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Enquiry Response Submittion confirmation</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Confirm Enquiry Response Submittion</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitEnquiryResponse()">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
