changed employee detail click method

--- a/src/app/Employee/employee-detail/employee-detail.component.html
+++ b/src/app/Employee/employee-detail/employee-detail.component.html
@@ -7,7 +7,7 @@
         <div class="col-2">
         </div>
       <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
-          <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" (click)="addEmployee()">Add</button>
+        <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/employee/add/0'">Add</button>
       </div>
       <div class="col-lg-4 col-md-3 col-sm-6 col-12">
           <span class="input-group" style="float: right;">
