--- a/src/app/product-sub-system/add-product-type/add-product-type.component.html
+++ b/src/app/product-sub-system/add-product-type/add-product-type.component.html
@@ -1,1 +1,58 @@
-<p>add-product-type works!</p>
+<div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-8">
+        <div class="card">
+            <div class="card-header text-center">
+                <h3>Add Product Type</h3>
+            </div>
+            <div class="card-body">
+
+
+                <div class="row">
+                    <div class="card">
+                        <div class="card-body">
+                            <form [formGroup]="productTypeForm">
+                                <div class="row form-group">
+                                    <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                        <label>Product Type Name:</label>
+                                        <input type="text" class="form-control" placeholder="Product Type Name"
+                                            formControlName="productTypeName">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="row mt-5">
+                            <div class="col-12">
+                                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"
+                                data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{productTypeId==0?'Save':'Update'}}</button>
+                                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/product/type/detail'">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-2">
+            </div>
+        </div>
+
+                  <!-- Product Size Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Product Type Addition confirmation</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Confirm Product Type Addition</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddProductTypeForm()">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
