--- a/src/app/Admin/EnquiryType/add-enquiry-type/add-enquiry-type.component.html
+++ b/src/app/Admin/EnquiryType/add-enquiry-type/add-enquiry-type.component.html
@@ -1,1 +1,54 @@
-<p>add-enquiry-type works!</p>
+
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Enquiry Type</h3>
+    </div>
+    <div class="card-body">
+      
+
+        <div class="row">
+            <div class="card">
+                <div  class="card-header ">
+                  <h5>Add Enquiry Type</h5>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="addEnquiryTypeForm">
+                          <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label >Name:</label>
+                                <input type="text" class="form-control" placeholder="enquiry type name" formControlName="enquiryTypeDescription">
+                            </div>
+                          </div>
+                    </form>
+                </div>
+              </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{enquiryTypeId==0?'Save':'Update'}}</button>
+                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/enquiry-type-detail'" >Cancel</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <!-- Admin Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Enquiry Type Addition confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Confirm Enquiry Type Addition</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddEnquiryTypeForm()">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
